--- a/index.html
+++ b/index.html
@@ -11,31 +11,35 @@
     <section>
         <h2>Learn Web Design, Coding and Much More</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores eligendi inventore ea necessitatibus vitae vel soluta ipsum, totam odio perferendis itaque sit labore voluptates magni libero iusto pariatur. Quos, asperiores.</p>
-    </section>
-
     <form action="#" method="POST">
         <fieldset>
             <p>Try it for free for 7 days starting at $25 a month</p>
             <h3>Field of Interest</h3>
-            <div>
-                <input type="radio" id="html" name="area-interest" value="HTML" checked>
-                <label for="html">HTML</label>
+
+
+            <div class="flex-container">
+                <div>
+                    <input type="radio" id="html" name="area-interest" value="HTML" checked>
+                    <label for="html">HTML</label>
+                </div>
+
+                <div>
+                    <input type="radio" id="css" name="area-interest" value="CSS">
+                    <label for="css">Styling a Website</label>
+                </div>
+
+                <div>
+                    <input type="radio" id="js" name="area-interest" value="JavaScript">
+                    <label for="js">JavaScript</label>
+                </div>
+
+                <div>
+                    <input type="radio" id="uxui" name="area-interest" value="UX UI">
+                    <label for="uxui">UX/UI</label>
+                </div>
             </div>
 
-            <div>
-                <input type="radio" id="css" name="area-interest" value="CSS">
-                <label for="css">Styling a Website</label>
-            </div>
 
-            <div>
-                <input type="radio" id="js" name="area-interest" value="JavaScript">
-                <label for="js">JavaScript</label>
-            </div>
-
-            <div>
-                <input type="radio" id="uxui" name="area-interest" value="UX UI">
-                <label for="uxui">UX/UI</label>
-            </div>
 
             <div>
                 <label for="f-name">First Name</label>
@@ -54,14 +58,16 @@
 
             <div>
                 <label for="password">Password</label>
-                <input type="password" id="password" required autocomplete="off" minlength="10" placeholder="Passwords must be 10 characters long">
+                <input type="password" id="password" required autocomplete="off" minlength="10" placeholder="Passwords must be 10 characters">
             </div>
 
             <div>
                 <input type="submit" value="Claim your Free Trial &#9656">
+                <p>By signing up you are agreeing to our <a href="#">Terms of Service</a></p>
             </div>
         </fieldset>
     </form>
+</section>
 
 </body>
 </html>
