--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,67 +8,83 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <section>
-        <h2>Learn Web Design, Coding and Much More</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores eligendi inventore ea necessitatibus vitae vel soluta ipsum, totam odio perferendis itaque sit labore voluptates magni libero iusto pariatur. Quos, asperiores.</p>
-    <form action="#" method="POST">
-        <fieldset>
-            <p>Try it for free for 7 days starting at $25 a month</p>
-            <h3>Field of Interest</h3>
+        <div class="title">
+            <h2>Learn Web Design, Coding and Much More</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores eligendi inventore ea necessitatibus
+                vitae vel soluta ipsum, totam odio perferendis itaque sit labore voluptates magni libero iusto pariatur.
+                Quos, asperiores.</p>
+        </div>
+
+        <form action="#" method="POST">
+            <fieldset>
+                <p>Try it for free for 7 days starting at $25 a month</p>
+                <h3>Field of Interest</h3>
 
 
-            <div class="flex-container">
+                <div class="flex-container">
+                    <div>
+                        <input type="radio" id="html" name="area-interest" value="HTML" checked>
+                        <label for="html">HTML</label>
+                    </div>
+
+                    <div>
+                        <input type="radio" id="css" name="area-interest" value="CSS">
+                        <label for="css">Styling a Website</label>
+                    </div>
+
+                    <div>
+                        <input type="radio" id="js" name="area-interest" value="JavaScript">
+                        <label for="js">JavaScript</label>
+                    </div>
+
+                    <div>
+                        <input type="radio" id="uxui" name="area-interest" value="UX UI">
+                        <label for="uxui">UX/UI</label>
+                    </div>
+                </div>
+
+
+
                 <div>
-                    <input type="radio" id="html" name="area-interest" value="HTML" checked>
-                    <label for="html">HTML</label>
+                    <label for="f-name">First Name</label>
+                    <input type="text" id="f-name" required autofocus>
                 </div>
 
                 <div>
-                    <input type="radio" id="css" name="area-interest" value="CSS">
-                    <label for="css">Styling a Website</label>
+                    <label for="l-name">Last Name</label>
+                    <input type="text" id="l-name" required>
                 </div>
 
                 <div>
-                    <input type="radio" id="js" name="area-interest" value="JavaScript">
-                    <label for="js">JavaScript</label>
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" required placeholder="Email Required">
                 </div>
 
                 <div>
-                    <input type="radio" id="uxui" name="area-interest" value="UX UI">
-                    <label for="uxui">UX/UI</label>
+                    <label for="password">Password</label>
+                    <input type="password" id="password" required autocomplete="off" minlength="10"
+                        placeholder="Passwords must be 10 characters">
                 </div>
-            </div>
+
+                <div>
+                    <div class="checkbox">
+
+                        <label for="agree">
+                            <p>By signing up you are agreeing to our <a href="#">Terms of Service</a></p>
+                        </label>
+                        <input type="checkbox" id="agree" name="agree" value="terms of use">
+                    </div>
+                    <input type="submit" value="Claim your Free Trial &#9656">
 
 
-
-            <div>
-                <label for="f-name">First Name</label>
-                <input type="text" id="f-name" required autofocus>
-            </div>
-
-            <div>
-                <label for="l-name">Last Name</label>
-                <input type="text" id="l-name" required>
-            </div>
-
-            <div>
-                <label for="email">Email Address</label>
-                <input type="email" id="email" required placeholder="Email Required">
-            </div>
-
-            <div>
-                <label for="password">Password</label>
-                <input type="password" id="password" required autocomplete="off" minlength="10" placeholder="Passwords must be 10 characters">
-            </div>
-
-            <div>
-                <input type="submit" value="Claim your Free Trial &#9656">
-                <p>By signing up you are agreeing to our <a href="#">Terms of Service</a></p>
-            </div>
-        </fieldset>
-    </form>
-</section>
+                </div>
+            </fieldset>
+        </form>
+    </section>
 
 </body>
+
 </html>
